# web3cat

./: .gitignore  .pylintrc  .readthedocs.yaml  LICENSE.md  README.rst  Untitled.ipynb  pyproject.toml
.github/workflows/: main.yml
chainlink/: .gitignore  main.py
data/: __init__.py  core.py  view.py  views.py
data/chainlink/: __init__.py  chainlink_data.py
data/erc20s/: __init__.py  erc20_data.py
data/ethers/: __init__.py  ether_data.py
data/portfolio/: portfolio.py
data/portfolios/: __init__.py  portfolio.py
docs/: api-fetcher.rst  api.data.chainlink.rst  api.data.core.rst  api.data.erc20s.rst  api.data.ether.rst  api.data.gearbox.rst  api.data.portfolios.rst  api.data.rst  api.fetcher.balances.rst  api.fetcher.blocks.rst  api.fetcher.calls.rst  api.fetcher.core.rst  api.fetcher.db.rst  api.fetcher.erc20_metas.rst  api.fetcher.events.rst  api.fetcher.events_indices.rst  api.fetcher.rst  api.fetcher.utils.rst  api.fetcher.w3_utils.rst  api.rst  api.view.rst  conf.py  cookbook.rst  getting-started.rst  index.rst  intro.rst  tech.rst
erc20_meta/: main.py  tokens.json
examples/cookbook/: cookbook.ipynb  total_supply.ipynb
examples/data/: chainlink.ipynb  erc20.ipynb  erc20_data.ipynb  erc20_data1.ipynb  ethers.ipynb  gearbox.ipynb  portfolio.ipynb
examples/fetcher/: balances.ipynb  blocks.ipynb  calls.ipynb  erc20_metas.ipynb  events.ipynb
examples/research/: ftx_balance.ipynb
examples/view/: view.ipynb
fetcher/: __init__.py  core.py  db.py  repo.py  utils.py  w3_utils.py
fetcher/balances/: __init__.py  balance.py  repo.py  service.py
fetcher/blocks/: __init__.py  block.py  repo.py  service.py
fetcher/calls/: __init__.py  call.py  repo.py  service.py
fetcher/erc20_metas/: __init__.py  erc20_meta.py  repo.py  service.py  tokens.json
fetcher/events/: __init__.py  event.py  repo.py  service.py
fetcher/events_indices/: __init__.py  bitarray.py  constants.py  index.py  index_data.py  repo.py
probe/: blocks.py  db.py  events.py  model.py  probe.py  repo.py  w3_utils.py
probe/blocks/: repo.py  service.py
probe/erc20_metas/: erc20_meta.py  repo.py  service.py  tokens.json
probe/event_indices/: index.py  index_data.py  repo.py
probe/events/: bitarray.py  db.py  event.py  index.py  model.py  repo.py  service.py
probe/events_indices/: index.py  index_data.py  repo.py
test/: conftest.py  fixtures.py  test_blocks.py  test_blocks_db.py  test_db.py  test_events.py
view/: __init__.py  view.py
(+123 files in other folders)
