[tool.poetry]
name = "selene"
version = "0.1.0"
description = ""
authors = ["mono6"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.30.0"
# this is a temporary dependency fix for web3, as 3.20.2 doesn't work on M1
protobuf = "3.20.1" 

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
hypothesis = "^6.54.5"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
