[tool.poetry]
name = "web3cat"
version = "0.1.0"
description = ""
authors = ["Mono6 <monowhile6@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.30.0"
# This is a temporary dependency fix for web3, as 3.20.2 doesn't work on M1
# After this is fixed, remove this dependency
protobuf = "3.20.1" 
polars = "^0.14.18"
numpy = "^1.23.3"
bokeh = "^2.4.3"
jupyter-bokeh = "^3.0.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
hypothesis = "^6.54.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
jupyterlab = "^3.4.8"
sphobjinv = "^2.2.2"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
