[tool.poetry]
name = "web3cat"
version = "0.1.7"
description = "Data visualization for EVM-based blockchains"
authors = ["Mono6 <monowhile6@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^6.0.0"
polars = "^0.16.16"
numpy = "^1.23.3"
bokeh = "^2.4.3"
jupyter-bokeh = "^3.0.5"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
hypothesis = "^6.54.5"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}
jupyterlab = "^3.4.8"
sphobjinv = "^2.2.2"
pylint = "^2.15.5"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^5.2.3"
sphinx-rtd-theme = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
